--- a/style.css
+++ b/style.css
@@ -3,3 +3,33 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;  
+}
+img { 
+  display: block; 
+  margin-left: auto;
+  margin-right: auto;
+}
+nav a {
+  border: 1px solid black;
+  background-color: green;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+figcaption {
+  text-align: center; font-size: 12px;
+}
+
+#featured-property p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px; 
+  text-align: center;
+}
+#details div{
+  float: left;
+  background-color: 
+  text-align: center;
+  width: 25%;
+}
