--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ figcaption {
 }
 #details div{
   float: left;
-  background-color: 
+  background-color: green;
   text-align: center;
   width: 25%;
 }
